# Thirsty-lang

./: .dockerignore  .gitattributes  .gitignore  .npmignore  AUTHORS.txt  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEFENSIVE_IMPLEMENTATION_SUMMARY.md  DEPENDENCIES.txt  DEPENDENCY_VERIFICATION.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  FEATURE_IMPLEMENTATION.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FEATURE_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINGUIST_SUBMISSION.md  MASTER_LINGUIST_CHECKLIST.md  OPERATIONS.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_READY.md  PROJECT_AI_INTEGRATION.md  PROJECT_SUMMARY.md  PYTHON_SETUP.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  SECURITY_API.md  TARL_INTEGRATION.md  TEST_DOCUMENTATION.md  TUTORIAL.md  UPGRADE_SUMMARY.md  UTF_RECOGNITION.md  docker-compose.yml  (+15 more)
.github/workflows/: ci.yml  publish.yml
docs/: EXPANSIONS.md  FAQ.md  INSTALLATION.md  PUBLISHING.md  QUICK_REFERENCE.md  SECURITY_API.md  SECURITY_GUIDE.md  SPECIFICATION.md  TUTORIAL.md  grammar.ebnf
docs/sovereignty/: THIRSTY_LANG_MANIFESTO.md
examples/: arithmetic.thirsty  arrays.thirsty  async-demo.thirsty  binary-protocol.tscgb  classes.thirsty  comprehensive-test.thirsty  constitutional-wire.tscg  control-flow.thirsty  divine-tier.tog  file-io.thirsty  functions.thirsty  hello.thirsty  hydration.thirsty  loops.thirsty  math-utils.thirsty  module-demo.thirsty  network-demo.thirsty  orchestrator.tarl  server_demo.thirsty  shadow-containment.shadow  sovereign-showcase.thirst  stdlib.thirsty  string-utils.thirsty  tscg_demo.thirsty  variables.thirsty
examples/advanced/: classes.shadow  classes.thirstofgods  control-flow.tog  functions.tarl  functions.thirstyplusplus
examples/security/: advanced-defense.thirsty  attack-mitigation.thirsty  basic-protection.thirsty  demo.js  paranoid-mode.thirsty  policy-enforcement-example.js  security-demo.js  threat-detection-example.js
ide-extensions/emacs/: thirsty-mode.el
ide-extensions/vim/syntax/: thirsty.vim
ide-extensions/vscode/: package.json
ide-extensions/vscode/src/: extension.ts
ide-extensions/vscode/syntaxes/: thirsty.tmLanguage.json
playground/: index.html  mobile_playground.html
playground/web/: index.html
samples/: README.md  arrays.thirsty  calculator.thirsty  fibonacci.thirsty  hello-world.thirsty  security.thirsty  stdlib.thirsty
src/: ast.js  cli.js  debugger.js  doc-generator.js  formatter.js  index.js  linter.js  lsp.js  package-manager.js  profiler.js  repl.js  secure-interpreter.js  thirsty-cli.js  thirsty_interpreter.py  thirsty_repl.py  thirsty_utils.py  training.js  transpiler.js
src/app/core/: thirsty_native_bridge.py
src/core/tscg/: grammar.bnf  semantic_dictionary.json  tscg.thirsty
src/engine/: ast-interpreter.js  logger.js  parser.js  tokenizer.js
src/foundation/: THIRSTY_LANG_SPEC.thirsty
src/interpreter/: class-function-handlers.js  control-flow.js  db.js  exception-handlers.js  expression-evaluator.js  security-handlers.js  stdlib.js
src/security/: bridge.js  circuit-breaker.js  code-morpher.js  defense-compiler.js  index.js  policy-engine.js  tarl_bridge_server.py  threat-detector.js
src/test/: arrays-tests.js  bridge-tests.js  circuit-breaker-tests.js  classes-tests.js  exception-tests.js  functions-tests.js  json-tests.js  modules-tests.js  performance-benchmarks.js  runner.js  security-hardening-tests.js  security-integration-tests.js  security-tests.js  stdlib-ast-tests.js  stdlib-tests.js
src/thirsty_lang/: __init__.py  compiler.py  errors.py  grammar.py  ir.py  parser.py  validator.py
src/thirsty_lang/examples/: hello_world.tl.yaml
submissions/github-linguist/: PR_STRATEGY.md  PULL_REQUEST_DRAFT.md  README.md  SAMPLE_INDEX.md  SEARCH_QUERIES.md  UPSTREAM_SERIES.md  build_submission_bundle.py  export_upstream_series.py
tarl/: __init__.py  policy.py  runtime.py  spec.py
tarl/config/: tarl.toml
tarl/policies/: default.json  example.yaml
tarl/stdlib/: README.md  __init__.py  tarl_archives.py  tarl_collections.py  tarl_datetime.py  tarl_db_interface.py  tarl_db_sqlite.py  tarl_filesystem.py  tarl_http_client.py  tarl_http_server.py  tarl_itertools.py  tarl_lsp.py  tarl_math.py  tarl_package.py  tarl_path.py  tarl_playground.py  tarl_sockets.py  tarl_streams.py  tarl_tempfiles.py  tarl_websocket.py  test_fileio.py  test_network.py  test_stdlib.py  test_tracks_456.py  test_tracks_78.py
tests/: test_compiler.py  test_parser.py  test_validator.py
thirsty-extension/: language-configuration.json  package.json
thirsty-extension/snippets/: thirsty.json
thirsty-extension/syntaxes/: thirsty.tmLanguage.json
thirsty_lang/: __init__.py  __main__.py  interpreter.py
tmp/: debug_wrap.js  parse_test.js  test_host_interop.js  tokenize_lib_test.js  tokenize_test.js
tools/: benchmark-optimized.js  benchmark.js
tree-sitter-utf/: README.md  grammar.js  package.json  tree-sitter.json
tree-sitter-utf/queries/: highlights.scm  locals.scm  tags.scm
ui/: index.html  style.css
vscode-extension/: CHANGELOG.md  LICENSE  README.md  package.json
vscode-extension/snippets/: thirsty.json
vscode-extension/syntaxes/: thirsty.tmLanguage.json
