[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thirsty-lang"
version = "1.0.0"
description = "Sovereign Stack workflow definition language: parse → validate → compile YAML flows to Monolith tasks and Waterfall DAG specs"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Thirsty-Lang Team", email = "team@thirsty-lang.org"}
]
keywords = [
    "thirsty-lang", "sovereign-stack", "workflow", "dsl", "dag",
    "monolith", "waterfall", "tarl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Only hard runtime dependency: PyYAML for .tl.yaml parsing.
dependencies = [
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "types-PyYAML>=6.0.12",
    "pip-audit>=2.7.0",
    "build>=1.0.0",
    "wheel>=0.43.0",
]

[project.urls]
"Homepage"     = "https://github.com/IAmSoThirsty/Thirsty-Lang"
"Bug Tracker"  = "https://github.com/IAmSoThirsty/Thirsty-Lang/issues"
"Source Code"  = "https://github.com/IAmSoThirsty/Thirsty-Lang"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["src"]
include = ["thirsty_lang*"]

[tool.setuptools.package-data]
thirsty_lang = ["examples/*.tl.yaml"]

# ── Test ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "--cov=thirsty_lang --cov-report=term-missing -q"

# ── Lint / format ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length    = 100
target-version = ["py311", "py312"]

# ── Type-check ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.11"
strict              = true
warn_return_any     = true
warn_unused_configs = true
