[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Thirsty-Lang"
version = "2.0.0"
description = "A fun, water-themed programming language with defensive security features — interpreter, REPL, and toolchain"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Jeremy Karrick", email = "team@Thirsty-Lang.org"}
]
keywords = [
    "Thirsty-Lang", "programming-language", "interpreter", "repl",
    "water", "fun", "educational", "defensive-programming", "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Education",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
thirsty = "thirsty_lang:main"

[project.urls]
"Homepage"     = "https://github.com/IAmSoThirsty/Thirsty-Lang"
"Bug Tracker"  = "https://github.com/IAmSoThirsty/Thirsty-Lang/issues"
"Source Code"  = "https://github.com/IAmSoThirsty/Thirsty-Lang"
"Playground"   = "https://iamsothirsty.github.io/Thirsty-Lang/"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["thirsty_lang*"]

[tool.setuptools.package-data]
thirsty_lang = ["py.typed"]

# ── Test ──────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
python_files   = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts        = "-q"

# ── Lint / format ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length    = 100
target-version = ["py38", "py312"]

# ── Type-check ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version      = "3.8"
strict              = true
warn_return_any     = true
warn_unused_configs = true
